# _obsolete_django-auth-adfs-db

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  setup.cfg  tox.ini
.github/workflows/: ci.yml
django_auth_adfs_db/: __init__.py  admin.py  apps.py  backends.py  models.py  settings.py
django_auth_adfs_db/migrations/: 0001_initial.py  0002_adfsconfig_sync_groups.py  0003_auto_20210323_1441.py
docs/: index.rst  quickstart.rst
testapp/: settings.py  urls.py
tests/: test_settings.py
