# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-auth-adfs-db
version = 0.1
description = A database-backed django-auth-adfs settings class
long_description = file: README.rst
url = https://github.com/isprojects/django-auth-adfs-db
license = MIT
author = ISProjects B.V., Sergei Maertens, Maykin Media
author_email = info@isprojects.nl
keywords = ADFS, Django, database, authentication backend
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = django_auth_adfs_db
install_requires =
    django
    django-auth-adfs
    django-solo
tests_require =
    psycopg2
    pytest
    pytest-django
    tox
    isort
    black

[options.extras_require]
tests =
    psycopg2
    pytest
    pytest-django
    tox
    isort
    black
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
; skip_glob =
not_skip = __init__.py
known_django=django
known_first_party=django_auth_adfs_db
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
junit_family = legacy
DJANGO_SETTINGS_MODULE = testapp.settings

[pep8]
max-line-length=88
exclude=env,.tox,doc

[flake8]
max-line-length=88
exclude=env,.tox,doc
